# annabel-rust

./: .gitignore  LICENSE,txt  README.md
annabel/: Cargo.toml
annabel/assets/art/: MeadowsMap.txt  bels_room.ldtk  meadows.ldtk  meadows_map.ldtk  meadows_map_1layer.ldtk  sample2_map.ldtk  sample_map.ldtk
annabel/assets/art/Hearts/PNG/basic/: background.png.import  border.png.import  heart.png.import
annabel/assets/art/Hearts/PNG/health_bar/: health_bar.png.import  health_bar_decoration.png.import
annabel/src/: main.rs  systems.rs
annabel/src/game/: Boss_Fight.rs  MainLevel.rs  map_loader.rs  mod.rs  objectives.rs  player.rs  tilemap.rs
annabel/src/game/Boss_Fight/: protective_plants.rs  thorn_manager.rs  thorns.rs
annabel/src/game/MainLevel/: MainCameraConfig.rs
annabel/src/game/Physics/: Colliders.rs
annabel/src/game/game_ui/: mod.rs
annabel/src/game/game_ui/Stats/: components.rs  mod.rs  styles.rs  systems.rs
annabel/src/game/game_ui/game_over_menu/: components.rs  mod.rs  styles.rs  systems.rs
annabel/src/main_menu/: components.rs  mod.rs  styles.rs
annabel/src/main_menu/systems/: interactions.rs  layout.rs  mod.rs
