[package]
name = "annabel"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy ="0.10.1"
bevy_editor_pls = "0.4.0"
bevy_ecs_ldtk = "0.7.0"
bevy_rapier2d = {version = "0.21.0", features = ["debug-render-2d"] }
rand = "0.8.5"
